clusters/segel-cluster/fiskekartan/fiskekartan.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fiskekartan
  namespace: fiskekartan
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - fiskekartan.swaren.se
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fiskekartan
          port: 8080
